--- a/Dublador de animes.html
+++ b/Dublador de animes.html
@@ -64,7 +64,7 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
         
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner 3">
         <div class="carousel-item active">
           <img src="img/fotos dos dublado/dublador do broly.jpg" class="d-block w-100" alt="..."> 
           <p>Dublador do broly do Dragon ball</p>         
