--- a/filmes de Animes.html
+++ b/filmes de Animes.html
@@ -64,26 +64,32 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
         
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner 1">
         <div class="carousel-item active">
-          <img src="img/DBZ1.jpg" class="d-block w-100" alt="...">
+          <img src="img/filmes de animes/Dragon-Ball-Super-Broly-Art.jpg" class="d-block w-100" alt="...">
+          <p>Dragon-Ball-Super-Broly o filme</p>
         </div>
         <div class="carousel-item">
-          <img src="img/DBZ2.png" class="d-block w-100" alt="...">
+          <img src="img/filmes de animes/Kimetsu-no-Yaiba-Mugen-Ressha-hen.jpg" class="d-block w-100" alt="...">
+          <p>Kimetsu-no-Yaiba-Mugen-Ressha-hen o Filme</p>
         </div>
         <div class="carousel-item">
-          <img src="img/DBZ3.jpg" class="d-block w-100" alt="...">
+          <img src="img/filmes de animes/pokemon duelo lendario.jpg" class="d-block w-100" alt="...">
+          <p>Duelo lendario pokemon</p>
         </div>
         <div class="carousel-item">
-          <img src="img/IMGNARUTO1.png" class="d-block w-100" alt="...">
+          <img src="img/filmes de animes/super onze.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block"></div>
+          <p>Super onze o Filme</p>
           </div>
           <div class="carousel-item">
-            <img src="img/IMGNARUTO2.jpg" class="d-block w-100" alt="...">
+            <img src="img/filmes de animes/filme de naruto.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block"></div>
+            <p>Filme de Lasth</p>
             </div>
             <div class="carousel-item">
-            <img src="img/IMGNARUTO3.png" class="d-block w-100" alt="...">
+            <img src="img/filmes de animes/naruto the movie.jpg" class="d-block w-100" alt="...">
+            <p>naruto the movie</p>
               </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
