--- a/fotos de Animes.html
+++ b/fotos de Animes.html
@@ -64,7 +64,7 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
         
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner 2">
         <div class="carousel-item active">
           <img src="img/DBZ1.jpg" class="d-block w-100" alt="...">
         </div>
