--- a/Ondeestamos.html
+++ b/Ondeestamos.html
@@ -24,26 +24,26 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link "href=" home.html">Home</a>
+                <a class="nav-link " href="home.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   1
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="fotos de Animes.html">fotos de Animes</a></li>
-                  <li><a class="dropdown-item" href="Livros de Animes.html">Livros de Animes</a></li>
-                  <li><a class="dropdown-item" href="filmes de Animes.html">Filmes de Animes</a></li>
+                  <li><a class="dropdown-item" href="fotosdeAnimes.html">fotos de Animes</a></li>
+                  <li><a class="dropdown-item" href="LivrosdeAnimes.html">Livros de Animes</a></li>
+                  <li><a class="dropdown-item" href="filmesdeAnimes.html">Filmes de Animes</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Linguagem de Animes.html">Linguagem de Animes</a>
+                <a class="nav-link" href="LinguagemdeAnimes.html">Linguagem de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Dublador de animes.html">Dublador de Animes</a>
+                <a class="nav-link" href="Dubladordeanimes.html">Dublador de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Onde estamos.html">Onde estamos</a>
+                <a class="nav-link" href="Ondeestamos.html">Onde estamos</a>
               </li>
 
             </ul>
@@ -52,7 +52,11 @@
         </div>
       </nav>
     <!-- fim da barra de navegacao -->
+    <!-- inico da onde estamos -->
     
+    <div id="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117035.07754221554!2d-46.775936383593724!3d-23.55600749999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59a8d9acd0e7%3A0x3cde9e12c2eae172!2sLivraria%20-%20ANIME%20HUNTER!5e0!3m2!1spt-BR!2sbr!4v1652115789292!5m2!1spt-BR!2sbr"style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
+    <!-- fim da onde estamos -->
     
 
     <main>
