--- a/filmesdeAnimes.html
+++ b/filmesdeAnimes.html
@@ -31,19 +31,19 @@
                   1
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="fotos de Animes.html">fotos de Animes</a></li>
-                  <li><a class="dropdown-item" href="Livros de Animes.html">Livros de Animes</a></li>
-                  <li><a class="dropdown-item" href="filmes de Animes.html">Filmes de Animes</a></li>
+                  <li><a class="dropdown-item" href="fotosdeAnimes.html">fotos de Animes</a></li>
+                  <li><a class="dropdown-item" href="LivrosdeAnimes.html">Livros de Animes</a></li>
+                  <li><a class="dropdown-item" href="filmesdeAnimes.html">Filmes de Animes</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Linguagem de Animes.html">Linguagem de Animes</a>
+                <a class="nav-link" href="LinguagemdeAnimes.html">Linguagem de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Dublador de animes.html">Dublador de Animes</a>
+                <a class="nav-link" href="Dubladordeanimes.html">Dublador de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Onde estamos.html">Onde estamos</a>
+                <a class="nav-link" href="Ondeestamos.html">Onde estamos</a>
               </li>
 
             </ul>
@@ -64,32 +64,32 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
         
       </div>
-      <div class="carousel-inner 3">
+      <div class="carousel-inner 1">
         <div class="carousel-item active">
-          <img src="img/fotos dos dublado/dublador do broly.jpg" class="d-block w-100" alt="..."> 
-          <p>Dublador do broly do Dragon ball</p>         
+          <img src="img/filmes de animes/Dragon-Ball-Super-Broly-Art.jpg" class="d-block w-100" alt="...">
+          <p>Dragon-Ball-Super-Broly o filme</p>
         </div>
         <div class="carousel-item">
-          <img src="img/fotos dos dublado/dublador do goku.jpg" class="d-block w-100" alt="...">
-          <p>Dublador do goku do Dragon ball</p>
+          <img src="img/filmes de animes/Kimetsu-no-Yaiba-Mugen-Ressha-hen.jpg" class="d-block w-100" alt="...">
+          <p>Kimetsu-no-Yaiba-Mugen-Ressha-hen o Filme</p>
         </div>
         <div class="carousel-item">
-          <img src="img/fotos dos dublado/dublador do itachi.jfif" class="d-block w-100" alt="...">
-          <p>Dublador do itachi do naruto</p>
+          <img src="img/filmes de animes/pokemon duelo lendario.jpg" class="d-block w-100" alt="...">
+          <p>Duelo lendario pokemon</p>
         </div>
         <div class="carousel-item">
-          <img src="img/fotos dos dublado/dublador do naruto.jpg" class="d-block w-100" alt="...">
+          <img src="img/filmes de animes/super onze.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block"></div>
-          <p>Dublador do naruto do Naruto</p>
+          <p>Super onze o Filme</p>
           </div>
           <div class="carousel-item">
-            <img src="img/fotos dos dublado/dublador do sasuke.jfif" class="d-block w-100" alt="...">
+            <img src="img/filmes de animes/filme de naruto.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block"></div>
-            <p>Dublador do Sasuke do Naruto</p>
+            <p>Filme de Lasth</p>
             </div>
             <div class="carousel-item">
-            <img src="img/fotos dos dublado/dublador do vegeta.jfif" class="d-block w-100" alt="...">
-            <p>Dublador do vegeta do Dragon ball</p>
+            <img src="img/filmes de animes/naruto the movie.jpg" class="d-block w-100" alt="...">
+            <p>naruto the movie</p>
               </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
