--- a/Dubladordeanimes.html
+++ b/Dubladordeanimes.html
@@ -24,26 +24,26 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link "href=" home.html">Home</a>
+                <a class="nav-link " href=" home.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   1
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="fotos de Animes.html">fotos de Animes</a></li>
-                  <li><a class="dropdown-item" href="Livros de Animes.html">Livros de Animes</a></li>
-                  <li><a class="dropdown-item" href="filmes de Animes.html">Filmes de Animes</a></li>
+                  <li><a class="dropdown-item" href="fotosdeAnimes.html">fotos de Animes</a></li>
+                  <li><a class="dropdown-item" href="LivrosdeAnimes.html">Livros de Animes</a></li>
+                  <li><a class="dropdown-item" href="filmesdeAnimes.html">Filmes de Animes</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Linguagem de Animes.html">Linguagem de Animes</a>
+                <a class="nav-link" href="LinguagemdeAnimes.html">Linguagem de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Dublador de animes.html">Dublador de Animes</a>
+                <a class="nav-link" href="Dubladordeanimes.html">Dublador de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Onde estamos.html">Onde estamos</a>
+                <a class="nav-link" href="Ondeestamos.html">Onde estamos</a>
               </li>
 
             </ul>
@@ -64,26 +64,32 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
         
       </div>
-      <div class="carousel-inner 2">
+      <div class="carousel-inner 3">
         <div class="carousel-item active">
-          <img src="img/DBZ1.jpg" class="d-block w-100" alt="...">
+          <img src="img/fotos dos dublado/dublador do broly.jpg" class="d-block w-100" alt="..."> 
+          <p>Dublador do broly do Dragon ball</p>         
         </div>
         <div class="carousel-item">
-          <img src="img/DBZ2.png" class="d-block w-100" alt="...">
+          <img src="img/fotos dos dublado/dublador do goku.jpg" class="d-block w-100" alt="...">
+          <p>Dublador do goku do Dragon ball</p>
         </div>
         <div class="carousel-item">
-          <img src="img/DBZ3.jpg" class="d-block w-100" alt="...">
+          <img src="img/fotos dos dublado/dublador do itachi.jfif" class="d-block w-100" alt="...">
+          <p>Dublador do itachi do naruto</p>
         </div>
         <div class="carousel-item">
-          <img src="img/IMGNARUTO1.png" class="d-block w-100" alt="...">
+          <img src="img/fotos dos dublado/dublador do naruto.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block"></div>
+          <p>Dublador do naruto do Naruto</p>
           </div>
           <div class="carousel-item">
-            <img src="img/IMGNARUTO2.jpg" class="d-block w-100" alt="...">
+            <img src="img/fotos dos dublado/dublador do sasuke.jfif" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block"></div>
+            <p>Dublador do Sasuke do Naruto</p>
             </div>
             <div class="carousel-item">
-            <img src="img/IMGNARUTO3.png" class="d-block w-100" alt="...">
+            <img src="img/fotos dos dublado/dublador do vegeta.jfif" class="d-block w-100" alt="...">
+            <p>Dublador do vegeta do Dragon ball</p>
               </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
