--- a/LivrosdeAnimes.html
+++ b/LivrosdeAnimes.html
@@ -24,26 +24,26 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link "href=" home.html">Home</a>
+                <a class="nav-link " href="home.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   1
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="fotos de Animes.html">fotos de Animes</a></li>
-                  <li><a class="dropdown-item" href="Livros de Animes.html">Livros de Animes</a></li>
-                  <li><a class="dropdown-item" href="filmes de Animes.html">Filmes de Animes</a></li>
+                  <li><a class="dropdown-item" href="fotosdeAnimes.html">fotos de Animes</a></li>
+                  <li><a class="dropdown-item" href="LivrosdeAnimes.html">Livros de Animes</a></li>
+                  <li><a class="dropdown-item" href="filmesdeAnimes.html">Filmes de Animes</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Linguagem de Animes.html">Linguagem de Animes</a>
+                <a class="nav-link" href="LinguagemdeAnimes.html">Linguagem de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Dublador de animes.html">Dublador de Animes</a>
+                <a class="nav-link" href="Dubladordeanimes.html">Dublador de Animes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Onde estamos.html">Onde estamos</a>
+                <a class="nav-link" href="Ondeestamos.html">Onde estamos</a>
               </li>
 
             </ul>
@@ -52,6 +52,50 @@
         </div>
       </nav>
     <!-- fim da barra de navegacao -->
+
+    <!-- início da linha dos cafés -->
+    <div id="linha">
+      <div>
+          <img src="img/img dos livros/ryukendo.jpg" alt="livro do ryukendo" >
+          <h4>livro do ryukendo</h4>
+          <p>R$ 35,50 </p>          
+      </div>
+
+      <div>
+          <img src="img/img dos livros/ryukendo2.jpg" alt="livro do ryukendo 2">
+          <h4>livro do ryukendo 2 </h4>
+          <p>R$ 30,75  2</p>
+      </div>
+
+      <div>
+          <img src="img/img dos livros/Super_Onze_destaque.jpg" alt="livro do super onze">
+          <h4>livro do super onze</h4>
+          <p>R$ 29,50 </p>
+      </div>
+
+      <div>
+          <img src="img/img dos livros/capa_super_onze_33_g-150x228.jpg" alt="livro do super onze">
+          <h4>livro do super onze</h4>
+          <p>R$ 30,25  </p>
+      </div>
+
+      <div>
+          <img src="img/img dos livros/D_NQ_NP_968739-MLB41535586420_042020-O.jpg" alt="livro do naruto" >
+          <h4>livro do naruto</h4>
+          <p>R$ 40,63   </p>
+      </div>
+
+          <div>
+              <img src="img/img dos livros/fc1909b99963b43aacf7ffd15d7973e2.jfif" alt="coleção do livro do Dragon-Ball-Super">
+              <h4>coleção do livro do Dragon-Ball-Super</h4>
+              <p>R$ 350,40 </p>
+          </div>
+  
+
+
+  </div>
+
+ <!--fim da linha dos cafés  -->
     
     
 
